--- a/FreeCode/index.html
+++ b/FreeCode/index.html
@@ -12,7 +12,8 @@
 
 <body>
     <header class="showcase">
-        <div class="content">
+
+        <div class="content" id="anch_home">
             <a href="https://ibb.co/b6TTq4T"><img src="https://i.ibb.co/b6TTq4T/logo.png" alt="logo"></a>
             <div class="title">
                 Welcome To Free Courses place
@@ -33,15 +34,33 @@
                 <p>Learn how to code using our youtube channels </p>
             </div>
             <div>
-                <i class="fas fa-chalkboard-teacher fa-3x"></i>
+                <a href=""><i class="fas fa-chalkboard-teacher fa-3x"></i></a>
                 <h3>Courses</h3>
                 <p>Register for free and get started with Free Courses</p>
             </div>
             <div>
-                <i class="fas fa-briefcase fa-3x"></i>
+                <a href=""><i class="fas fa-briefcase fa-3x"></i></a>
                 <h3>Freelancing Projects</h3>
-                <p>After you learn hoe to code you can start Freelancing with our team </p>
+                <p>After you learn how to code you can start Freelancing with our team </p>
             </div>
+        </div>
+    </section>
+
+    <!-- Navigation inside page-->
+    <nav class="navbar nav-resp">
+        <a href="#anch_home">Home</a>
+        <a href="#anch_aboutus">About Us</a>
+        <div class="anch_home" id="home"></div>
+        <div class="anch_aboutus" id="aboutus"></div>
+    </nav>
+
+    <section id="n">
+        <div class="bg-light">
+            <h1>Sign up</h1>
+            <form>
+                <input type="email" placeholder="Enter email...">
+                <button type="submit" class="button_1">sign up</button>
+            </form>
         </div>
     </section>
 
@@ -63,7 +82,7 @@
     </section>
 
     <footer class="center bg-dark">
-        <p>Free Courses &copy; 2020-2022</p>
+        <p>Free Courses & freeCodeCamp &copy; 2020-2022</p>
     </footer>
 
 </body>
