added comments and readme file

--- a/FreeCode/indexmain.html
+++ b/FreeCode/indexmain.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Free Code</title>
 </head>
+<!--main body-->
 
 <body>
     <header class="showcase">
@@ -58,8 +59,7 @@
 
     </nav>
 
-
-
+    <!-- form for sign up-->
     <section id="sing">
         <div class=" center bg-light" id="#anch_sign">
             <h1>Sign up</h1>
@@ -95,9 +95,8 @@
             </div>
         </div>
     </section>
-    <br>
-    <br>
-    <br>
+
+    <!--Contacts-->
     <section id="section-d">
         <div class="box">
             <h2 class="content-title">Contact Us</h2>
@@ -107,7 +106,7 @@
         </div>
 
     </section>
-
+    <!-- bottom of page-->
     <footer class="center bg-dark">
 
         <p>Free Courses & freeCodeCamp &copy; 2020-2022</p>
